--- a/investmate-web-app/src/App.css
+++ b/investmate-web-app/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +38,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.footer {
+  text-align: center;
+  background-image: linear-gradient(to right, #3D138F, #3B138D);
+  color: black;
+  padding: 10px 0 10px 40px;
+  height: 20%;
 }
