Fixing data handling issues

--- a/investmate-web-app/src/App.css
+++ b/investmate-web-app/src/App.css
@@ -348,6 +348,12 @@
   font-weight: bold;
 }
 
+.favsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 /*==================================
 
       TABLET & DESKTOP RESPONSIVE
