Added skeleton for stock graph. Need to populate with real data

--- a/investmate-web-app/src/App.css
+++ b/investmate-web-app/src/App.css
@@ -376,6 +376,14 @@
   width: 95vw;
 }
 
+.chartContainer{
+  padding-right: 15px;
+}
+
+
+.canvasjs-chart-canvas{
+  padding-right: 15px;
+}
 /*==================================
 
       TABLET & DESKTOP RESPONSIVE
