--- a/investmate-web-app/src/App.css
+++ b/investmate-web-app/src/App.css
@@ -145,6 +145,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  object-fit: contain;
 }
 
 .research-cards-iconContainer__icon{
